<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="btn_start">Play</string>
    <string name="you_win">You Win!</string>
    <string name="tie">It\'s Tie!</string>
    <string name="lose">You Lose!</string>
    <string name="play">Play Game</string>
    <string name="about">About game</string>
    <string name="about_game_text">Tic-tac-toe (American English), noughts and crosses (British English), or Xs and Os is a paper-and-pencil game for two players, X and O, who take turns marking the spaces in a 3×3 grid. The player who succeeds in placing three of their marks in a horizontal, vertical, or diagonal row wins the game.</string>
    <string name="about_game_title">About Tic Tac Toe</string>
    <string name="back_btn">Back</string>
    <string name="welcome">Welcome To Tic Tac Toe Game!</string>
</resources>
